# GM2Calc-tests

./: .gitignore  README.md  test.sh
test_FindGM2Calc/: CMakeLists.txt  test
test_installation/: example.c  example.cpp  meson.build  test
test_subproject/: CMakeLists.txt  test
